[package]
name = "iec61850"
version = "0.1.0"
edition = "2024"

[dependencies]
rasn = "0.28.0"
tokio = { version = "1.47.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
    "net",
    "io-util",
] }
tokio-native-tls = "0.3.1"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
snafu = "0.8.6"
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"

[build-dependencies]
rasn-compiler = "0.14.3"

[dev-dependencies]
rust-telemetry = { version = "1.2.0", features = ["tracing-error"] }
